--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@400;700&display=swap');
 
 *,
 **:before,
@@ -16,7 +16,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Nunito', sans-serif;
   color: white;
 }
 
@@ -31,8 +31,8 @@ body {
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
-  font-size: 40px;
-  margin: 0 6px 6px 0;
+  font-size: 50px;
+  margin: 0 15px 6px 0;
 }
 
 .btn-grid {
@@ -53,7 +53,8 @@ body {
   justify-content: center;
   align-items: center;
   color: white;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Nunito', sans-serif;
+  font-weight: bold;
   transition: transform 0.3s;
   cursor: pointer;
 }
