--- a/style.css
+++ b/style.css
@@ -88,3 +88,9 @@ body {
 .btn-grid .btn-dot {
   background-color: #333;
 }
+
+@media (max-width: 425px) {
+  .calculator {
+    transform: scale(.85)
+  }
+}
